--- a/assests/css/main.css
+++ b/assests/css/main.css
@@ -58,6 +58,7 @@ span.notification {
     background-color: white;
     width: 30%;
     border-left: 2px solid whitesmoke;
+    overflow-y: scroll;
 }
 .main-content {
     margin-left: 20%;
@@ -135,6 +136,7 @@ p.bold {
 p.based {
     text-align: center;
     margin-top: 20px;
+    padding-bottom: 100px;
 }
 input[type=search] {
     background-color: whitesmoke;
